--- a/app/index.html
+++ b/app/index.html
@@ -204,7 +204,7 @@
                         <h4>Consulting</h4>
                         <p>Stars life that waters firmament our created you.</p>
                         <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="20" height="14" fill="none">
-                                        <path stroke="#17161A" stroke-width="1.7" d="M0 7h18m0 0-6.75-6M18 7l-6.75 6"></path>
+                                        <path stroke="" stroke-width="1.7" d="M0 7h18m0 0-6.75-6M18 7l-6.75 6"></path>
                                     </svg></a>
                     </div>
                 </div>
@@ -217,7 +217,7 @@
                         <h4>IOS Development</h4>
                         <p>Lights creeping good herb their won't dry days she'd grass.</p>
                         <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="20" height="14" fill="none">
-                                        <path stroke="#17161A" stroke-width="1.7" d="M0 7h18m0 0-6.75-6M18 7l-6.75 6"></path>
+                                        <path stroke="" stroke-width="1.7" d="M0 7h18m0 0-6.75-6M18 7l-6.75 6"></path>
                                     </svg></a>
                     </div>
                 </div>
@@ -230,7 +230,7 @@
                         <h4>Marketing & SEO</h4>
                         <p>Them seasons the the yielding one, thing brought behold.</p>
                         <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="20" height="14" fill="none">
-                                        <path stroke="#17161A" stroke-width="1.7" d="M0 7h18m0 0-6.75-6M18 7l-6.75 6"></path>
+                                        <path stroke="" stroke-width="1.7" d="M0 7h18m0 0-6.75-6M18 7l-6.75 6"></path>
                             </svg></a>
                     </div>
                 </div>
@@ -243,7 +243,7 @@
                         <h4>Accounting</h4>
                         <p>Yielding bring seed was sea seasons shall that bearing.</p>
                         <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="20" height="14" fill="none">
-                                        <path stroke="#17161A" stroke-width="1.7" d="M0 7h18m0 0-6.75-6M18 7l-6.75 6"></path>
+                                        <path stroke="" stroke-width="1.7" d="M0 7h18m0 0-6.75-6M18 7l-6.75 6"></path>
                             </svg></a>
                     </div>
                 </div>
