--- a/app/index.html
+++ b/app/index.html
@@ -251,7 +251,98 @@
             <button class="btn">
                 <a href="">Our services</a>
             </button>
+        </div>
+    </div>
+</section>
+<!-- Want to get a free consultation -->
+<section class="consult">
+    <div class="background">
+        <div class="background-image-container">
+            <div class="background-image">
+            </div>
+        </div>
+        <div class="background-color">
+        </div>
+    </div>
+    <div class="wrapper">
+        <div class="container">
+            <h3>Want to get a free consultation?</h3>
+            <div class="contact">
+                <div class="tele">
+                    <svg class="me-15 align-self-center text-white" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none">
+                                    <path fill="currentColor" d="M16 11.98v2.408a1.604 1.604 0 0 1-1.094 1.527 1.613 1.613 0 0 1-.66.079 15.941 15.941 0 0 1-6.943-2.465A15.672 15.672 0 0 1 2.476 8.71a15.869 15.869 0 0 1-2.47-6.96A1.603 1.603 0 0 1 .96.136C1.163.047 1.384 0 1.607 0h2.414A1.61 1.61 0 0 1 5.63 1.381c.102.77.29 1.528.563 2.256a1.603 1.603 0 0 1-.362 1.694l-1.022 1.02a12.86 12.86 0 0 0 4.827 4.817l1.022-1.02a1.61 1.61 0 0 1 1.697-.36c.73.271 1.489.46 2.26.561A1.61 1.61 0 0 1 16 11.98Z"></path>
+                    </svg>
+                    <a href="tel:12023580309">+1 202-358-0309</a>
+                </div>
+                <div class="email">
+                    <svg class="me-15 align-self-center text-white" xmlns="http://www.w3.org/2000/svg" width="14" height="11" fill="none">
+                                    <path fill="currentColor" d="M14 0H0l7 4.583L14 0Z"></path>
+                                    <path fill="currentColor" d="M14 9.821V2L7 6.5 0 2v7.821C0 10.47.63 11 1.4 11h11.2c.77 0 1.4-.53 1.4-1.179Z"></path>
+                    </svg>
+                    <a href="mailto:help@startbox.com">help@startbox.com</a>
+                </div>
+            </div>
+            <button class="btn">Get in Touch</button>
 
+        </div>
+    </div>
+</section>
+<!-- What we do -->
+<section class="what">
+    <div class="wrapper">
+        <div class="container">
+            <div class="left">
+                <span class="badge">What we do</span>
+                <h3>With experience from top companies</h3>
+                <p>Shall over firmament, above there won't image wherein winged moveth two heaven green, the whose had so let evening forth together given form make said them. Appear grass evening shall.</p>
+                <div class="button">
+                    <a href="">Learn more</a>
+                </div>
+            </div>
+            <div class="right">
+                <img src="https://runwebrun.com/startbox/assets/img/root/graphic-900x570.png" alt="">
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Successful projects -->
+<section class="successful">
+    <div class="background">
+        <div class="background-image">
+        </div>
+        <div class="background-color"></div>
+    </div>
+    <div class="wrapper">
+        <div class="container">
+            <div class="card card-1">
+                <div class="number">
+                    328
+                </div>
+                <div class="name">Successful projects</div>
+                <p class="desc">You every can't thing seed subdue subdue light female.</p>
+            </div>
+            <div class="card card-2">
+                <div class="number">
+                    10+
+                </div>
+                <div class="name">Years of exeperience</div>
+                <p class="desc">Called a fly, behold seasons meat which stars bring fruit.</p>
+            </div>
+            <div class="card card-3">
+                <div class="number">
+                    68%
+                </div>
+                <div class="name">Cost savings</div>
+                <p class="desc">Image isn't that give appear made us you're yielding.</p>
+            </div>
+            <div class="card card-4">
+                <div class="number">
+                    1k
+                </div>
+                <div class="name">Email leads generated</div>
+                <p class="desc">Fruit deep first cattle set fourth without and day subdue.</p>
+            </div>
         </div>
     </div>
 </section>
