--- a/app/index.html
+++ b/app/index.html
@@ -123,8 +123,9 @@
                 <div class="right">
                     <form class="box" action="index.html" method="POST">
                         <h4>Free Consultation</h4>
-                        <input type="text" placeholder="Your Name *" class="text">
-                        <input type="email" placeholder="Your Phone / Email *" class="email">
+                        <input type="text" id="fname" name="firstname" placeholder="Your Name *">
+                        <input type="email" id="email" name="email" placeholder="Your Phone / Email *">
+
                         <!-- Select items -->
                         <select name="choice" id="choice">
                             <option value="I interested in ..." selected>I interested in ...</option>
