Alhamdulillah, completed popUps

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,13 @@
 </head>
 
 <body>
+    <div class="pop-up-bg"></div>
+    <section class="pop-up">
+        <div class="container">
+            <div class='pop-up-x' type="button">×</div>
+            <iframe class="iframe" src="//www.youtube.com/embed/AT6oSIDbGkw?autoplay=1" frameborder="0" allowfullscreen=""></iframe>
+        </div>
+    </section>
     <main>
         <header class="header">
             <div class="line"></div>
@@ -386,15 +393,17 @@
     </section>
 
     <!-- youtube vedio section -->
-    <section class="v-section">
+    <section class="v-section" id="popUp">
         <div class="background" id="bg">
         </div>
         <div class="click-btn">
-            <a href="https://www.youtube.com/watch?v=AT6oSIDbGkw">
+            <a href="#popUp">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 16 18"><path fill="currentColor" d="M15.191 10.393 2.466 17.776C1.386 18.402 0 17.644 0 16.382V1.616C0 .356 1.384-.404 2.466.225L15.19 7.608a1.605 1.605 0 0 1 0 2.785Z"></path></svg>
             </a>
         </div>
     </section>
+
+
 
     <!-- companies -->
     <section class="companies">
